style.css
body {
    background-color: rgb(52, 52, 213);
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    line-height: 1.5;
}

header {
    display: flex;
    justify-content: center;
    color: white;
}

main {
    display: flex;
    justify-content: center;
}

input {
    border: 2px solid black;
    border-radius: 5px;
    padding: 0.5rem;
    outline-width: 0;
    font-size: 15px;
    width: 50%;
}

button {
    background-color: green;
    color: white;
    border: none;
    padding: 0.5rem;
    border-radius: 5px;
    font-size: 17px;
}

button:hover {
    cursor: pointer;
}

form {
    padding-bottom: 30px;
}

ul {
    padding: 0;
}


.task-box {
    background-color: white;
    border: 5px solid royalblue;
    border-radius: 10px;
    padding-left: 20px;
    width: 40%;
    min-height: 200px;
}

.delete-button {
    background-color: rgb(203, 0, 0);
}

.list-item {
    background-color: rgb(239, 239, 239);
    border: 1px solid rgb(127, 127, 127);
    list-style-type: none;
    padding: 0.5rem;
    width: 80%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: 16px;
    margin-bottom: 10px;
}

